...
    Scaffold(
        modifier = modifier,
        topBar = {
            TopAppBar(
                title = { Text(input.messages.firstOrNull()?.message?:"")},
                navigationIcon = {
                    TextButton(onClick = {eventHandler.onBack()}, modifier = Modifier.padding(8.dp).size(48.dp).semantics { contentDescription = "BackButton" }) {
                        Text("<")
                    }
                }
            )
        },
        bottomBar = {
            MessageInputBox {
                eventHandler.addMessage(it)
            }
        }
    ) { padding ->
        Column(modifier = Modifier.padding(padding)) {
            MessageList(input.messages)
        }
    }
}
