...
            MessageInputBox {
                eventHandler.onNewMessage(it)
            }
        },
        topBar = {
            CenterAlignedTopAppBar(title = {
                Text("Title", style = MaterialTheme.typography.titleLarge)
            }
            )
        },
//        contentWindowInsets = WindowInsets.statusBars
    ) { paddingValue ->
        Column(modifier = Modifier.padding(paddingValue)) {
...
